# VetoGest

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/config/: settings.py  urls.py
backend/customers/: admin.py  models.py  serializers.py  urls.py
backend/customers/migrations/: 0001_initial.py  0002_alter_customer_options_and_more.py
backend/customers/tests/: conftest.py  test_models.py  test_serializers.py  test_views.py
backend/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
backend/users/tests/: conftest.py  test_models.py  test_permissions.py  test_serializers.py  test_views.py
client/: Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
client/src/: App.css  App.tsx  index.css  main.tsx
client/src/components/: CreateClientForm.tsx
client/src/components/ui/FormField/: FormField.module.css  FormField.tsx
client/src/components/ui/FormFieldError/: FormFieldError.module.css  FormFieldError.tsx
client/src/context/: AuthContext.tsx  AuthProvider.context.tsx
client/src/features/auth/components/LoginForm/: LoginForm.module.css  LoginForm.tsx
client/src/features/customers/services/: customerService.ts
client/src/features/customers/utils/: customerValidator.test.ts  customerValidator.ts
client/src/routing/: router.tsx  routingPaths.ts
client/src/services/: api.ts  authentication.ts
client/src/types/: auth.types.ts  customer.ts
client/src/utils/: errors.ts
(+2 files in other folders)
